[package]
name = "pulldown-cmark-ast"
version = "0.1.0"
edition = "2021"
description = "An AST for pulldown-cmark"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/pulldown-cmark-ast"
documentation = "https://docs.rs/pulldown-cmark-ast"
repository = "https://github.com/aatifsyed/pulldown-cmark-ast"
categories = [
    "parsing",
    "parser-implementations",
    "text-editors",
    "text-processing",
]
keywords = ["markdown", "commonmark", "ast"]

[dependencies]
pulldown-cmark = { version = "0.11.0", default-features = false }

[dev-dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
